# speaches

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  flake.nix  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: test.yaml
docs/: realtime-inspector.md
nix/: dependencies.nix  devshell.nix  e2e-test.nix  local-cuda-config.nix  module.nix  onnxruntime-coreml.nix  overlay.nix  package.nix  vm-test.nix
scripts/: create_kokoro_v1_onnx_model_repos.py  create_piper_model_repos.py  performance_benchmark.py  realtime_transcription_client.py
scripts/realtime_scenarios/: README.md  analyze.py  fetch_ndjson.sh  lib.js  package.json  run.js  run_extra.js  run_modes.js  run_stt.js  run_transcription.js  snap_inspector.js
scripts/realtime_scenarios/audio/: barge.pcm  cough.pcm  long_question.pcm
src/speaches/: __init__.py  api_types.py  audio.py  config.py  dependencies.py  hf_utils.py  logger.py  main.py  text_utils.py  tracing.py  utils.py
src/speaches/executors/: kokoro.py  kokoro_pytorch.py  parakeet.py  piper.py  pocket_tts.py  pyannote_diarization.py  qwen3_tts.py  silero_vad_v5.py  wespeaker_speaker_embedding.py  whisper.py
src/speaches/executors/shared/: base_model_manager.py  registry.py
src/speaches/inspect/: audio_store.py  emit.py  registry.py  relay.py  retention.py
src/speaches/inspect/static/: index.html
src/speaches/inspect/static/design/: colors_and_type.css
src/speaches/inspect/static/dev/: data.js
src/speaches/inspect/static/inspector/: app.js  client.js  timeline.js
src/speaches/realtime/: chat_utils.py  context.py  conversation_event_router.py  event_router.py  input_audio_buffer.py  input_audio_buffer_event_router.py  message_manager.py  pubsub.py  response_event_router.py  session.py  session_event_router.py  utils.py
src/speaches/realtime/rtc/: audio_stream_track.py
src/speaches/routers/: chat.py  diarization.py  inspect.py  misc.py  realtime_rtc.py  realtime_ws.py  speech.py  stt.py
src/speaches/types/: inspect.py  realtime.py
src/speaches/ui/: app.py  utils.py
src/speaches/ui/tabs/: audio_chat.py
tests/: api_chat_test.py  api_model_test.py  auth_test.py  conftest.py  diarization_test.py  e2e_api.py  e2e_kokoro_pytorch.py  e2e_pocket_tts.py  e2e_realtime.py  model_manager_test.py  openai_timestamp_granularities_test.py  openai_transcription_test.py  pocket_tts_test.py  realtime_api_test.py  speech_embedding_test.py  speech_test.py  test_chat_utils_extra_body.py  test_doc_claims.py  test_input_audio_buffer.py  test_inspector.py  test_interruption.py  test_otel_imports.py  test_phrase_chunker.py  test_response_handler.py  test_session_config.py  text_utils_test.py
tests/realtime/: realtime_conversation_test.py
tests/scenarios/: __init__.py  _helpers.py  barge_in.py  basic_pipeline.py  cancel_no_response.py  clear_buffer.py  delete_item.py  manual_commit.py  manual_conversation.py  multi_round.py  no_response_token.py  no_response_token_disabled.py  noise_gate.py  response_cancel.py  session_update.py  truncate.py
