[project]
name = "speaches"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "ctranslate2>=4.7.1",
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "huggingface-hub>=1.5.0",
    "kokoro-onnx[gpu]>=0.4.9,<0.5.0",
    "numpy>=2.4.2",
    "piper-tts>=1.4.1",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "uvicorn>=0.41.0",
    "aiostream>=0.7.1",
    "cachetools>=7.0.2",
    "httpx-ws>=0.8.2",
    "aiortc>=1.14.0",
    "httpx>=0.28.1",
    "onnx-asr>=0.10.2",
    "openai[realtime]>=2.24.0",
    "gradio>=6.8.0",
    "httpx-sse>=0.4.3",
    "opentelemetry-distro>=0.61b0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-asgi==0.61b0",
    "opentelemetry-instrumentation-asyncio==0.61b0",
    "opentelemetry-instrumentation-logging==0.61b0",
    "opentelemetry-instrumentation-threading==0.61b0",
    "opentelemetry-instrumentation-urllib==0.61b0",
    # "opentelemetry-instrumentation-wsgi==0.61b0"
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-instrumentation-grpc==0.61b0",
    "opentelemetry-instrumentation-httpx==0.61b0",
    "opentelemetry-instrumentation-requests==0.61b0",
    "opentelemetry-instrumentation-urllib3==0.61b0",
    "opentelemetry-instrumentation-openai-v2>=2.3b0",
    "opentelemetry-instrumentation-openai>=0.53.0",
    "onnx-diarization>=0.1.0",
]

[dependency-groups]
dev = [
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"},
]
docs = [
    "mdx-truly-sane-lists>=1.3",
    "mkdocs-material>=9.7.4",
    "mkdocs-render-swagger-plugin>=0.1.2",
    "mkdocstrings[python]>=1.0.3",
]
lint = [
    "basedpyright>=1.38.2",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]
test = [
    "anyio>=4.12.1",
    "datamodel-code-generator>=0.54.1",
    "pytest-antilru>=2.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.2",
    "srt>=3.5.3",
    "webvtt-py>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "FIX",
    "TD", # disable todo warnings
    "ERA",  # allow commented out code
    "ANN003", # missing kwargs
    "B006",
    "B008",
    "COM812", # trailing comma
    "D10",  # disabled required docstrings
    "D401",
    "EM102",
    "FBT001",
    "FBT002",
    "PLR0913",
    "PLR2004", # magic
    "RET504",
    "RET505",
    "RET508",
    "S101", # allow assert
    "S104",
    "S603", # subprocess untrusted input
    "SIM102",
    "T201", # print
    "TRY003",
    "TRY300",
    "TRY301",
    "W505",
    "ISC001", # recommended to disable for formatting
    "INP001",
    "PT018",
    "G004", # logging f string
    "E501", # line-too-long
    "PLC0415"
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

# https://docs.astral.sh/ruff/settings/#per-file-ignores
[tool.ruff.lint.per-file-ignores]
"src/speaches/types/**.py" = ["PYI051"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
pythonPlatform = "Linux"
# https://github.com/DetachHead/basedpyright?tab=readme-ov-file#pre-commit-hook
venvPath = "."
venv = ".venv"
ignore = [
    "misc/**"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function" # this fixes pytest warning
filterwarnings = [
    'ignore::DeprecationWarning'
]
# https://docs.pytest.org/en/stable/how-to/mark.html#registering-marks
markers = [
    "requires_openai",
]

[tool.uv]
required-version = ">=0.8.14"
constraint-dependencies = ["llvmlite>=0.40.0"]
# TODO: create an issue on https://github.com/thewh1teagle/kokoro-onnx regarding this
override-dependencies = ["onnxruntime-gpu>=1.24.2 ; platform_machine == 'x86_64'", "onnxruntime>=1.24.2 ; platform_machine != 'x86_64'"]

# [tool.uv.sources]
# piper-phonemize = [
#   { url = "https://github.com/fedirz/piper-phonemize/raw/refs/heads/master/dist/piper_phonemize-1.2.0-cp312-cp312-manylinux_2_28_aarch64.whl", marker = "platform_machine == 'aarch64' and sys_platform == 'linux'" },
#   { url = "https://github.com/fedirz/piper-phonemize/raw/refs/heads/master/dist/piper_phonemize-1.2.0-cp312-cp312-manylinux_2_28_x86_64.whl", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" },
# ]
#
# [[tool.uv.dependency-metadata]]
# name = "piper-tts"
# version = "1.2.0"
# requires-dist = ["piper-phonemize"]

[tool.uv.workspace]
members = [
    "packages/speaches-cli",
]
